@@ -1,1 +1,1 @@
-1.1.5
+1.1.6
