@@ -1,3 +1,8 @@
+* XXX XXX XX XXXX XX:XX:XX +0000 @email@ @version@-@version@%{?dist}
+- 13/08/2024
+01. svps: fix for pid file not found if svscan is not configured for /service
+02. supervise.c: pass additional "startup type" argument to ./run
+
 * Tue Aug 06 2024 12:48:42 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.5-1.1%{?dist}
 Release 1.1.5-1.1 Start 05/02/2024 End 06/08/2024
 - 05/03/2024
